<resources>
    <string name="app_name">SecondProject</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="menu_profile">Profile</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_music">Music</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_events">Events</string>
    <string name="menu_messages">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>